			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

20-Feb-2001
~~~~~~~~~~~
Added 'New File...' feature (James Kermode).

16-Feb-2001
~~~~~~~~~~~
Dropping icons on the pinboard positions them sensibly (Diego Zamboni).

09-Feb-2001 (Release 1.1.1)
~~~~~~~~~~~
Moving pinboard icons is nicer - it no longer assumes you dragged the middle
of the text... (Diego Zamboni).

Added a Polish translation (Andrzej Borsuk).

Bugfix: Sometimes it wasn't possible to delete something that was on a
	pinboard or panel, even after confirming (reported by Diego Zamboni).

07-Feb-2001
~~~~~~~~~~~
Sliders in the options box can have a numerical value display (Diego Zamboni).
Fixed a stray warning message displayed when non-default pinboard options
were used (Diego Zamboni).

New menu item 'Set Icon...' allows you to choose any icon for any file or
directory. Also allow .DirIcon.png to set a directory's icon (Diego Zamboni).

03-Feb-2001
~~~~~~~~~~~
Many internal changes to the Options system.

30-Jan-2001
~~~~~~~~~~~
Bugfix: On filesystems which aren't case sensitive (eg DOS) it was possible
	to copy 'tmp' as 'Tmp' and lose it! (reported by Denis Manente)

28-Jan-2001
~~~~~~~~~~~
Added Diego Zamboni's patch to make configuring VFS easier.

27-Jan-2001
~~~~~~~~~~~
Improved compiling - now correctly reports an error if the file doesn't
compile. If configure is missing then autoconf is run automatically.

After a Find completes, you are given the option of doing the search again
(Anders Lundmark).

Applications can define a list of menu items to display on their menus
(Diego Zamboni). The file should be called 'AppMenu' and contains a list of
lines in the form 'option Text'.

24-Jan-2001
~~~~~~~~~~~
Added two new pinboard options - one to allow setting the grid step size
and one to allow icons to go slightly off the side of the screen (Diego
Zamboni).

23-Jan-2001
~~~~~~~~~~~
Bugfix: Textured window backgrounds could cause a crash (reported by Diego
	Zamboni).

22-Jan-2001