@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+24-Feb-2001
+~~~~~~~~~~~
+Added two new options to control when minibuffer completion beeps (requested
+by Liav Asseraf).
+
 20-Feb-2001
 ~~~~~~~~~~~
 Added 'New File...' feature (James Kermode).
